# task-vs-hyde

./: .flake8  .gitignore  README.md  check_nomic_local.py  pdfs_to_mds.py  prepare_indices.py  prepare_questions.py  pyproject.toml  select_questions.py  start_vectordb.cmd  start_vectordb.sh
ds/: README.md
ds/manuals/: good.txt
ds/manuals/frags/: 59d055.yaml  79d60e.yaml  a26f32.yaml  b6d922.yaml  df8308.yaml  questions_selected.csv
ds/manuals/mds/: 59d055.md  68e044.md  79d60e.md  85e5e9.md  89da55.md  a26f32.md  b6d922.md  b75c8a.md  df8308.md
task_vs_hyde/ds/: __init__.py  prepare.py  reader.py  types.py
task_vs_hyde/utils/: messages.py  par_splitter.py
task_vs_hyde/utils/splitters/: __init__.py  base_chunk_splitter.py  char_splitter.py  paragraph_splitter.py  sentence_splitter.py  word_splitter.py
tests/utils/: test_par_splitter.py
tests/utils/splitters/: test_paragraph_splitter.py
